added chat with ollama llama3.1 AI model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=tinder
 server.port=9000
-tinderai.character.user={"id": "11", "firstName": "Aditya", "lastName": "Tomar", "age": 25, "ethnicity": "Indian", "gender": "MALE", "bio": "Software Programmer who loves coding and solving complex problems. Enjoys watching sports and loves jogging.", "imageUrl": "11.png", "myersBriggsPersonalityType": "INTJ"}
+tinderai.character.user={"id": "user", "firstName": "Aditya", "lastName": "Tomar", "age": 25, "ethnicity": "Indian", "gender": "MALE", "bio": "Software Programmer who loves coding and solving complex problems. Enjoys watching sports and loves jogging.", "imageUrl": "user.png", "myersBriggsPersonalityType": "INTJ"}
 logging.level.org.mongodb.driver=ERROR
+
+#spring.ai.ollama.base-url=localhost:11434
+spring.ai.ollama.chat.options.model=llama3.1
